[gd_scene load_steps=20 format=3 uid="uid://caopj3vi3udov"]

[ext_resource type="Script" path="res://scripts/lotto_generator.gd" id="1_y4v4f"]
[ext_resource type="PackedScene" uid="uid://cjsl4muxk01cc" path="res://objects/lotto_machine.tscn" id="2_2fe0u"]
[ext_resource type="PackedScene" uid="uid://dj3k26hgr08h3" path="res://objects/lotto_ball_group.tscn" id="3_8j45j"]
[ext_resource type="PackedScene" uid="uid://ch2u4au7yoj0m" path="res://objects/tube.tscn" id="4_ywbwm"]
[ext_resource type="PackedScene" uid="uid://dln2f077p82t2" path="res://objects/lotto_machine_bridge.tscn" id="5_24hud"]
[ext_resource type="PackedScene" uid="uid://c7bxhixmx88w0" path="res://objects/lotto_points_layer.tscn" id="6_ba88t"]
[ext_resource type="AudioStream" uid="uid://ddnqiqnwfrjiu" path="res://sounds/slot-machine-payout-81725.mp3" id="7_cach7"]
[ext_resource type="AudioStream" uid="uid://cs3324ml6rqhr" path="res://sounds/lottery_machine_sounds.wav" id="8_0acpr"]
[ext_resource type="Script" path="res://scripts/ball_detector.gd" id="9_hqj5j"]
[ext_resource type="Script" path="res://scenes/DeadZone.gd" id="9_mgmm3"]
[ext_resource type="AudioStream" uid="uid://x6xovrdmacpo" path="res://sounds/lotto-ball-105088.mp3" id="10_o2tlx"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_plqt5"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_cwudk"]
sky_material = SubResource("ProceduralSkyMaterial_plqt5")

[sub_resource type="Environment" id="Environment_g53dy"]
background_mode = 2
sky = SubResource("Sky_cwudk")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i1p81"]
albedo_color = Color(0.839216, 0.913725, 1, 1)
metallic_specular = 0.0

[sub_resource type="FontVariation" id="FontVariation_ww3mj"]

[sub_resource type="LabelSettings" id="LabelSettings_iesqf"]
font = SubResource("FontVariation_ww3mj")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ohlet"]
size = Vector3(598.628, 30.6359, 294.961)

[sub_resource type="BoxShape3D" id="BoxShape3D_exj82"]
size = Vector3(0.704224, 0.0606079, 1.57166)

[node name="LottoGenerator" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.35075, 165, 0)
script = ExtResource("1_y4v4f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_g53dy")

[node name="lotto_machine" parent="." instance=ExtResource("2_2fe0u")]
transform = Transform3D(20.0276, 0, 0, 0, 20.722, 0, 0, 0, 19.2949, 3.35267, 20.9144, 3.00504)

[node name="lotto_balls" parent="." instance=ExtResource("3_8j45j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.036, 12.6379, 3.18)

[node name="ReleasePoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7742, 10.1126, 3.29885)

[node name="Tube" parent="." instance=ExtResource("4_ywbwm")]
transform = Transform3D(-2.24579e-07, 0, 5.13777, 0, 3.08266, 0, -5.13777, 0, -2.24579e-07, 5.43463, -2.34275, 3.55412)

[node name="Bridge" parent="." instance=ExtResource("5_24hud")]
transform = Transform3D(7.58699, 1.03676, -5.68434e-14, -1.62803, 4.83152, 0, 0, 0, 11.1908, 21.6531, -11.5073, 3.53747)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.350207, 0.936672, 0, 0.936672, -0.350207, -1, -1.5308e-08, -4.09433e-08, 45.161, -10.855, 3.597)

[node name="lotto_points_layer" parent="." instance=ExtResource("6_ba88t")]

[node name="background1" type="CSGCylinder3D" parent="."]
transform = Transform3D(2.22603, 0, 7.27596e-12, 0, 357.641, 0, 1.42109e-14, 0, -1574.08, -35.4379, 34.9339, 1.43051e-06)
material = SubResource("StandardMaterial3D_i1p81")

[node name="PressToPick" type="Button" parent="."]
offset_left = 774.0
offset_top = 246.0
offset_right = 1002.0
offset_bottom = 277.0
text = "PRESS HERE TO PICK A BALL"

[node name="ExitToMenu" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.889
anchor_top = 0.855
anchor_right = 0.979
anchor_bottom = 0.894
offset_left = -61.336
offset_top = 12.0
offset_right = -61.496
offset_bottom = 19.6
text = "EXIT
"

[node name="Restart" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.889
anchor_top = 0.855
anchor_right = 0.979
anchor_bottom = 0.894
offset_left = -61.336
offset_top = -36.0
offset_right = -61.496
offset_bottom = -28.4
text = "RESTART"

[node name="Balls left" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.322
anchor_right = 0.913
anchor_bottom = 0.365
offset_left = 13.496
offset_top = 11.8
offset_right = 39.088
offset_bottom = 14.0
text = "LOTTO BALLS: 7/7"
label_settings = SubResource("LabelSettings_iesqf")
horizontal_alignment = 1

[node name="Picking a Ball" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.322
anchor_right = 0.913
anchor_bottom = 0.365
offset_left = 13.496
offset_top = 106.8
offset_right = 39.088
offset_bottom = 109.0
label_settings = SubResource("LabelSettings_iesqf")
horizontal_alignment = 1

[node name="BallSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cach7")
bus = &"SFX"

[node name="MachineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0acpr")
autoplay = true
bus = &"SFX"

[node name="DeadZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53398, -51.0115, 78.4719)
script = ExtResource("9_mgmm3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeadZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -158.363, 14.8179, -79.5077)
shape = SubResource("BoxShape3D_ohlet")

[node name="BallDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53397, -1.77893, 3.19025)
script = ExtResource("9_hqj5j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BallDetector"]
transform = Transform3D(6.99997, -0.0205607, -0.00401859, 0.0206008, 6.9996, 0.0717678, 0.00380757, -0.0717793, 6.99963, -1.03522, -0.723419, 0.0370789)
shape = SubResource("BoxShape3D_exj82")

[node name="BallFallSound" type="AudioStreamPlayer" parent="BallDetector"]
stream = ExtResource("10_o2tlx")
volume_db = -2.0
bus = &"SFX"

[connection signal="button_down" from="PressToPick" to="." method="_on_press_to_pick_button_down"]
[connection signal="button_up" from="PressToPick" to="." method="_on_press_to_pick_button_up"]
[connection signal="button_down" from="ExitToMenu" to="." method="_on_press_to_pick_button_down"]
[connection signal="button_up" from="ExitToMenu" to="." method="_on_press_to_pick_button_up"]
[connection signal="pressed" from="ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="button_down" from="Restart" to="." method="_on_press_to_pick_button_down"]
[connection signal="button_up" from="Restart" to="." method="_on_press_to_pick_button_up"]
[connection signal="pressed" from="Restart" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_body_entered"]
[connection signal="body_entered" from="BallDetector" to="BallDetector" method="_on_body_entered"]
[connection signal="body_exited" from="BallDetector" to="BallDetector" method="_on_body_exited"]
